// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA large 1`] = `
{
  "baseplates": {
    "6x3": 2,
    "6x6": 2,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 20,
      "pixelX": 480,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.5,
      "x": 12,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 20,
      "pixelX": 480,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.5,
      "x": 12,
      "y": 0,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 360,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 360,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 20,
      "pixelX": 480,
      "pixelY": 360,
      "type": "spacer",
      "width": 0.5,
      "x": 12,
      "y": 9,
    },
  ],
  "spacers": {
    "20mm x 10mm": 1,
    "20mm x 120mm": 1,
    "20mm x 240mm": 1,
    "240mm x 10mm": 2,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA medium 1`] = `
{
  "baseplates": {
    "4x3": 1,
    "4x6": 1,
    "6x3": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 160,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 4,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 160,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 4,
      "x": 6,
      "y": 6,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 360,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 160,
      "pixelX": 240,
      "pixelY": 360,
      "type": "spacer",
      "width": 4,
      "x": 0,
      "y": 9,
    },
  ],
  "spacers": {
    "160mm x 10mm": 1,
    "240mm x 10mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA small 1`] = `
{
  "baseplates": {
    "1x3": 1,
    "1x6": 1,
    "6x3": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 20,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.5,
      "x": 7,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 20,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.5,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 360,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 360,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.25,
      "pixelHeight": 10,
      "pixelWidth": 20,
      "pixelX": 280,
      "pixelY": 360,
      "type": "spacer",
      "width": 0.5,
      "x": 7,
      "y": 9,
    },
  ],
  "spacers": {
    "20mm x 10mm": 1,
    "20mm x 120mm": 1,
    "20mm x 240mm": 1,
    "240mm x 10mm": 1,
    "40mm x 10mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for Toolbox drawer 1`] = `
{
  "baseplates": {
    "5x1": 1,
    "5x6": 1,
    "6x1": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 200,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 200,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 17.2,
      "pixelX": 440,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.43,
      "x": 11,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 17.2,
      "pixelX": 440,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.43,
      "x": 11,
      "y": 0,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 280,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 200,
      "pixelX": 240,
      "pixelY": 280,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 17.2,
      "pixelX": 440,
      "pixelY": 280,
      "type": "spacer",
      "width": 0.43,
      "x": 11,
      "y": 7,
    },
  ],
  "spacers": {
    "17.2mm x 24.8mm": 1,
    "17.2mm x 240mm": 1,
    "17.2mm x 40mm": 1,
    "200mm x 24.8mm": 1,
    "240mm x 24.8mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for US Desk drawer 1`] = `
{
  "baseplates": {
    "2x6": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 80,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 35.6,
      "pixelX": 320,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.89,
      "x": 8,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 80,
      "pixelX": 240,
      "pixelY": 240,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 35.6,
      "pixelX": 320,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.89,
      "x": 8,
      "y": 6,
    },
  ],
  "spacers": {
    "240mm x 14mm": 1,
    "35.6mm x 14mm": 1,
    "35.6mm x 240mm": 1,
    "80mm x 14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for US Kitchen standard 1`] = `
{
  "baseplates": {
    "1x6": 2,
    "6x6": 4,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 40,
      "pixelX": 480,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 40,
      "pixelX": 480,
      "pixelY": 240,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 38.8,
      "pixelX": 520,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.97,
      "x": 13,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 38.8,
      "pixelX": 520,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.97,
      "x": 13,
      "y": 0,
    },
    {
      "height": 0.7,
      "pixelHeight": 28,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 480,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.7,
      "pixelHeight": 28,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 480,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.7,
      "pixelHeight": 28,
      "pixelWidth": 40,
      "pixelX": 480,
      "pixelY": 480,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.7,
      "pixelHeight": 28,
      "pixelWidth": 38.8,
      "pixelX": 520,
      "pixelY": 480,
      "type": "spacer",
      "width": 0.97,
      "x": 13,
      "y": 12,
    },
  ],
  "spacers": {
    "240mm x 28mm": 2,
    "38.8mm x 240mm": 2,
    "38.8mm x 28mm": 1,
    "40mm x 28mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Bambu Lab A1 1`] = `
{
  "baseplates": {
    "1x6": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 240,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "24.8mm x 14mm": 1,
    "24.8mm x 240mm": 1,
    "240mm x 14mm": 1,
    "40mm x 14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Ender 3 1`] = `
{
  "baseplates": {
    "2x1": 1,
    "2x5": 1,
    "5x1": 1,
    "5x5": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 80,
      "pixelX": 200,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 200,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 5,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 80,
      "pixelX": 200,
      "pixelY": 200,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 5,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 200,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 80,
      "pixelX": 200,
      "pixelY": 240,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "200mm x 14mm": 1,
    "24.8mm x 14mm": 1,
    "24.8mm x 200mm": 1,
    "24.8mm x 40mm": 1,
    "80mm x 14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa MK3S+ 1`] = `
{
  "baseplates": {
    "1x1": 1,
    "1x5": 1,
    "6x1": 1,
    "6x5": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 200,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 5,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 200,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 5,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 200,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 40,
      "pixelX": 240,
      "pixelY": 240,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "24.8mm x 14mm": 1,
    "24.8mm x 200mm": 1,
    "24.8mm x 40mm": 1,
    "240mm x 14mm": 1,
    "40mm x 14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa Mini 1`] = `
{
  "baseplates": {
    "3x2": 1,
    "3x4": 1,
    "4x2": 1,
    "4x4": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 160,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 4,
      "x": 0,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 120,
      "pixelX": 160,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 4,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 80,
      "pixelWidth": 160,
      "pixelX": 0,
      "pixelY": 160,
      "type": "baseplate",
      "width": 4,
      "x": 0,
      "y": 4,
    },
    {
      "height": 2,
      "pixelHeight": 80,
      "pixelWidth": 120,
      "pixelX": 160,
      "pixelY": 160,
      "type": "baseplate",
      "width": 3,
      "x": 4,
      "y": 4,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 80,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 160,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 160,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 4,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 120,
      "pixelX": 160,
      "pixelY": 240,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "120mm x 14mm": 1,
    "160mm x 14mm": 1,
    "24.8mm x 14mm": 1,
    "24.8mm x 160mm": 1,
    "24.8mm x 80mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa XL 1`] = `
{
  "baseplates": {
    "7x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 280,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 7,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 280,
      "pixelX": 0,
      "pixelY": 240,
      "type": "spacer",
      "width": 7,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.35,
      "pixelHeight": 14,
      "pixelWidth": 24.8,
      "pixelX": 280,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.62,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "24.8mm x 14mm": 1,
    "24.8mm x 240mm": 1,
    "280mm x 14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for large printer 1`] = `
{
  "baseplates": {
    "1x7": 1,
    "8x7": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 7,
      "pixelHeight": 280,
      "pixelWidth": 320,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 8,
      "x": 0,
      "y": 0,
    },
    {
      "height": 7,
      "pixelHeight": 280,
      "pixelWidth": 40,
      "pixelX": 320,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 8,
      "y": 0,
    },
    {
      "height": 7,
      "pixelHeight": 280,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 0,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 320,
      "pixelX": 0,
      "pixelY": 280,
      "type": "spacer",
      "width": 8,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 40,
      "pixelX": 320,
      "pixelY": 280,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 280,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 7,
    },
  ],
  "spacers": {
    "21.2mm x 24.8mm": 1,
    "21.2mm x 280mm": 1,
    "320mm x 24.8mm": 1,
    "40mm x 24.8mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for metric drawer 1`] = `
{
  "baseplates": {
    "6x4": 2,
    "6x6": 2,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 20,
      "pixelX": 480,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.5,
      "x": 12,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 20,
      "pixelX": 480,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.5,
      "x": 12,
      "y": 0,
    },
  ],
  "spacers": {
    "20mm x 160mm": 1,
    "20mm x 240mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for small printer 1`] = `
{
  "baseplates": {
    "3x1": 3,
    "3x3": 6,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 120,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 0,
      "pixelY": 120,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 3,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 120,
      "pixelY": 120,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 3,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 120,
      "pixelX": 240,
      "pixelY": 120,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 3,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 120,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 120,
      "pixelX": 120,
      "pixelY": 240,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 120,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 120,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 120,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 40,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 0,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 120,
      "pixelX": 0,
      "pixelY": 280,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 120,
      "pixelX": 120,
      "pixelY": 280,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 120,
      "pixelX": 240,
      "pixelY": 280,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.62,
      "pixelHeight": 24.8,
      "pixelWidth": 21,
      "pixelX": 360,
      "pixelY": 280,
      "type": "spacer",
      "width": 0.53,
      "x": 9,
      "y": 7,
    },
  ],
  "spacers": {
    "120mm x 24.8mm": 3,
    "21.2mm x 120mm": 2,
    "21.2mm x 24.8mm": 1,
    "21.2mm x 40mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for standard US drawer 1`] = `
{
  "baseplates": {
    "2x4": 1,
    "2x6": 1,
    "6x4": 2,
    "6x6": 2,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 80,
      "pixelX": 480,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 12,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 240,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 80,
      "pixelX": 480,
      "pixelY": 240,
      "type": "baseplate",
      "width": 2,
      "x": 12,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 240,
      "pixelWidth": 11.5,
      "pixelX": 560,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.29,
      "x": 14,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 160,
      "pixelWidth": 11.5,
      "pixelX": 560,
      "pixelY": 240,
      "type": "spacer",
      "width": 0.29,
      "x": 14,
      "y": 0,
    },
    {
      "height": 0.48,
      "pixelHeight": 19.1,
      "pixelWidth": 240,
      "pixelX": 0,
      "pixelY": 400,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 10,
    },
    {
      "height": 0.48,
      "pixelHeight": 19.1,
      "pixelWidth": 240,
      "pixelX": 240,
      "pixelY": 400,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 10,
    },
    {
      "height": 0.48,
      "pixelHeight": 19.1,
      "pixelWidth": 80,
      "pixelX": 480,
      "pixelY": 400,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 10,
    },
    {
      "height": 0.48,
      "pixelHeight": 19.1,
      "pixelWidth": 11.5,
      "pixelX": 560,
      "pixelY": 400,
      "type": "spacer",
      "width": 0.29,
      "x": 14,
      "y": 10,
    },
  ],
  "spacers": {
    "11.6mm x 160mm": 1,
    "11.6mm x 19.2mm": 1,
    "11.6mm x 240mm": 1,
    "240mm x 19.2mm": 2,
    "80mm x 19.2mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot with half-size bins enabled 1`] = `
{
  "baseplates": {},
  "halfSizeBins": {
    "10x10": 1,
    "2x10": 1,
  },
  "layout": [
    {
      "height": 10,
      "pixelHeight": 200,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 0,
      "type": "half-size",
      "width": 10,
      "x": 0,
      "y": 0,
    },
    {
      "height": 10,
      "pixelHeight": 200,
      "pixelWidth": 40,
      "pixelX": 200,
      "pixelY": 0,
      "type": "half-size",
      "width": 2,
      "x": 10,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 14,
      "pixelX": 240,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.35,
      "x": 12,
      "y": 0,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 200,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 10,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 40,
      "pixelX": 200,
      "pixelY": 200,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 10,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 14,
      "pixelX": 240,
      "pixelY": 200,
      "type": "spacer",
      "width": 0.35,
      "x": 12,
      "y": 10,
    },
  ],
  "spacers": {
    "100mm x 1.6mm": 1,
    "20mm x 1.6mm": 1,
    "7mm x 1.6mm": 1,
    "7mm x 100mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot with prefer half-size 1`] = `
{
  "baseplates": {
    "1x5": 1,
    "5x5": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 40,
      "pixelX": 200,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 5,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 200,
      "pixelWidth": 14,
      "pixelX": 240,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.35,
      "x": 6,
      "y": 0,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 200,
      "pixelX": 0,
      "pixelY": 200,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 5,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 40,
      "pixelX": 200,
      "pixelY": 200,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 5,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 14,
      "pixelX": 240,
      "pixelY": 200,
      "type": "spacer",
      "width": 0.35,
      "x": 6,
      "y": 5,
    },
    {
      "height": 0.08,
      "pixelHeight": 3.2,
      "pixelWidth": 0,
      "pixelX": 240,
      "pixelY": 200,
      "type": "spacer",
      "width": 0,
      "x": 6,
      "y": 5,
    },
  ],
  "spacers": {
    "0mm x 3.2mm": 1,
    "14mm x 200mm": 1,
    "14mm x 3.2mm": 1,
    "200mm x 3.2mm": 1,
    "40mm x 3.2mm": 1,
  },
}
`;
